Project

General

Profile

Actions

Bug #58974

open

Ceph - Bug #58975: mon: do not erroneously propose on error in ::prepare_update

mon/MonmapMonitor: do not propose on error in prepare_update

Added by Patrick Donnelly about 1 year ago. Updated 7 months ago.

Status:
Pending Backport
Priority:
High
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
backport_processed
Backport:
reef,quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 3 (2 open1 closed)

Copied to RADOS - Backport #62921: quincy: mon/MonmapMonitor: do not propose on error in prepare_updateIn ProgressPatrick DonnellyActions
Copied to RADOS - Backport #62922: pacific: mon/MonmapMonitor: do not propose on error in prepare_updateRejectedPatrick DonnellyActions
Copied to RADOS - Backport #62923: reef: mon/MonmapMonitor: do not propose on error in prepare_updateIn ProgressPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly about 1 year ago

  • Parent task set to #58975
Actions #2

Updated by Patrick Donnelly about 1 year ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 50503
Actions #3

Updated by Patrick Donnelly 7 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot 7 months ago

  • Copied to Backport #62921: quincy: mon/MonmapMonitor: do not propose on error in prepare_update added
Actions #5

Updated by Backport Bot 7 months ago

  • Copied to Backport #62922: pacific: mon/MonmapMonitor: do not propose on error in prepare_update added
Actions #6

Updated by Backport Bot 7 months ago

  • Copied to Backport #62923: reef: mon/MonmapMonitor: do not propose on error in prepare_update added
Actions #7

Updated by Backport Bot 7 months ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF