mon/MonmapMonitor: do not propose on error in prepare_update

Fixes: https://tracker.ceph.com/issues/58974
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit c0f36957245f6bd1251b529b9fc4416cb8168755)